--- a/style.css
+++ b/style.css
@@ -15,14 +15,69 @@ body{
   font: 50em;
 }
 
-
-img{
-  width: 100%;
-  display: block;
-}
 /*Phone*/
 @media only screen and (max-width: 469px) {
+  img{
+    width: 100%;
+    display: block;
+  }
+
+  figure > img{
+    grid-row: 1 / -1;
+    grid-column: 1;
+  }
+
+  figure{
+    background-color: #ffffff;
+    padding: 0.3rem;
+    margin: 0;
+    margin-bottom: 10px;
+    break-inside: avoid;
+  }
+
+  .content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr 1fr));
+    grid-auto-flow: dense;
+    margin-bottom: 10px;
+    break-inside: avoid;
+    column-width: 25rem;
+    column-count: auto;
+    column-gap: 10px;
+    justify-content: center;
+  }
 }
 /*Larger Screen*/
 @media only screen and (min-width: 1084px) {
+  img{
+    width: 100%;
+    display: block;
+  }
+
+  figure > img {
+    grid-row: 1 / -1;
+    grid-column: 1;
+  }
+
+  figure {
+    background-color: #ffffff;
+    padding: 0.3rem;
+    margin: 0;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    margin-bottom: 10px;
+    break-inside: avoid;
+  }
+
+  .content {
+    padding: 0.5rem;
+    column-width: 25rem;
+    column-count: auto;
+    column-gap: 10px;
+    justify-content: center;
+  }
+
+  figure:hover {
+    background-color:#547c5a;
+  }
 }
