--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 
   .content{
     display: grid;
-    grid-template-columns: repeat(auto-fill, 50vw);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr 1fr));
     grid-auto-flow: dense;
     margin-bottom: 10px;
     break-inside: avoid;
